--- a/index.css
+++ b/index.css
@@ -286,6 +286,7 @@ a:active {
     height: 100%;
     object-fit: cover;
     transition: all 0.3s ease;
+    filter: blur(75%) grayscale(25%);
 }
 
 .overlay {
@@ -314,4 +315,5 @@ a:active {
 
 .image-item:hover .overlay {
     opacity: 0;
+    filter: blur(0%) grayscale(0%);
 }
