--- a/index.css
+++ b/index.css
@@ -286,7 +286,7 @@ a:active {
     height: 100%;
     object-fit: cover;
     transition: all 0.3s ease;
-    filter: blur(50%) grayscale(100%);
+    filter: grayscale(100%);
 }
 
 .overlay {
