--- a/index.css
+++ b/index.css
@@ -29,18 +29,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(to bottom, rgba(128, 0, 0, 0.9), rgba(64, 0, 0, 0.5));
+    background: linear-gradient(to bottom, rgba(128, 0, 0, 0.75), rgba(64, 0, 0, 0.1));
 }
 
 .logo-container {
     display: flex;
     align-items: center;
-    gap: 10px; /* Space between logo and text */
+    gap: 20px;
     padding-left: 25px;
 }
 
 .logo {
-    width: 60px; /* Adjust as needed */
+    width: 80px;
     height: auto;
 }
 
