--- a/index.css
+++ b/index.css
@@ -278,11 +278,15 @@ a:active {
     display: flex;
     width: 100%;
     height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 .image-item {
-    flex: 1;
+    flex: 1 1 0; 
     height: 100%;
+    margin: 0; 
+    padding: 0;
     position: relative;
     overflow: hidden;
     transition: all 0.3s ease;
