--- a/index.css
+++ b/index.css
@@ -277,6 +277,10 @@ a:active {
     background: url('members/cinn.jpg') no-repeat center;
     background-size: cover;
 }
+#jolnaniro{
+    background: url('members/lebron.png') no-repeat center;
+    background-size: cover;
+}
 
 .image-container {
     display: flex;
